2003/12/28 23:27 (-0500) muppetman [unstable-2-3-x-branch]

	* maps-2.0: this file is called maps in HEAD, this merge (typemap
	for GdkRegion) didn't go in correctly.

2003/12/28 23:20 (-0500) muppetman [unstable-2-3-x-branch]

	update from HEAD.

	A examples/adding_stock_items.pl
	M MANIFEST
	M gdk.typemap
	M gtk2perl.h
	M t/01.GtkWindow.t
	M t/12.GtkDialog.t
	M t/21.GtkContainer.t
	M t/22.GtkListStore.t
	M t/23.GtkTreeStore.t
	M xs/GdkEvent.xs
	M xs/GdkGC.xs
	M xs/GdkRegion.xs
	M xs/GdkTypes.xs
	M xs/GdkWindow.xs
	M xs/GtkColorSelectionDialog.xs
	M xs/GtkContainer.xs
	M xs/GtkFileSelection.xs
	M xs/GtkFrame.xs
	M xs/GtkImageMenuItem.xs
	M xs/GtkMenuItem.xs
	M xs/GtkWindow.xs

2003/12/28 22:43 (-0500) muppetman [unstable-2-3-x-branch]

	* xs/GtkAction.xs, xs/GtkLabel.xs, xs/GtkUIManager.xs: allow
	NULL where applicable

	* xs/GtkActionGroup.xs, xs/GtkFileFilter.xs, xs/GtkItemFactory.xs,
	xs/GtkRadioAction.xs, xs/GtkRadioButton.xs, xs/GtkRadioMenuItem.xs,
	xs/GtkRadioToolButton.xs, xs/GtkTreeModelFilter.xs, xs/GtkTreeView.xs:
	always check pointers for NULL before passing it to SvOK.  in some
	cases this is overkill, but at this point i can't verify that
	preconditions will be valid.

	* xs/GtkClipboard.xs: new functions, request_targets and
	wait_for_targets

2003/12/23 01:40 (-0500) muppetman [unstable-2-3-x-branch]

	A xs/GtkIconTheme.xs
	A xs/GtkTreeModelFilter.xs
	* maps-2.3
	* xs_files-2.3
	* MANIFEST: new implementations for GtkIconTheme and GtkModelFilter

	* xs/GdkDrawable.xs, xs/GtkTreeModelFilter.xs: typo

	* xs/GtkActionGroup.xs: implement add_actions, add_toggle_actions,
	and add_radio_actions.

	* xs/GtkButton.xs: add set_alignment and get_alignment

	* xs/GtkCellLayout.xs: add reorder

	* xs/GtkExpander.xs: add set_use_markup and get_use_markup

	* xs/GtkFileFilter.xs: there is no boxed type support for GtkFileFilterInfo,
	so implement the wrap and unwrap functions.

	* xs/GtkMenu.xs: add set_monitor
